--- a/frontend/ai-voice--app/index.html
+++ b/frontend/ai-voice--app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/poker-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>AI Poker Rules Assistant</title>
   </head>
   <body>
     <div id="root"></div>
